force-app/main/default/objects/blng__CreditNoteAllocation__c/fields/Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Id__c</fullName>
    <formula>blng__InvoiceLine__r.blng__Invoice__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Id</label>
    <type>Text</type>
</CustomField>