force-app/main/default/objects/blng__CreditNoteAllocation__c/fields/NetSuite_Credit_Note_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Credit_Note_Internal_ID__c</fullName>
    <description>added field for NS integration as per BIZ-48235</description>
    <formula>blng__CreditNoteLine__r.blng__CreditNote__r.NS_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NetSuite Credit Note Internal ID</label>
    <type>Text</type>
</CustomField>