force-app/main/default/objects/blng__CreditNoteAllocation__c/fields/NS_Applied_To_Doc_Number__c.field-meta.xml
<CustomField>
    <fullName>NS_Applied_To_Doc_Number__c</fullName>
    <label>NS Applied To Doc Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>