force-app/main/default/objects/blng__CreditNoteAllocation__c/fields/NS_Applied_To_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Applied_To_Internal_ID__c</fullName>
    <label>NS Applied To Internal ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>