force-app/main/default/objects/blng__CreditNoteAllocation__c/fields/NS_Applied_to_Link__c.field-meta.xml
<CustomField>
    <fullName>NS_Applied_to_Link__c</fullName>
    <label>NS Applied to Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>