force-app/main/default/objects/blng__CreditNoteAllocation__c/validationRules/Legal_Entity_Needs_To_Be_The_Same.validationRule-meta.xml
<ValidationRule>
    <fullName>Legal_Entity_Needs_To_Be_The_Same</fullName>
    <active>true</active>
    <errorConditionFormula>blng__LegalEntity__c &lt;&gt; blng__InvoiceLine__r.blng__LegalEntity__c</errorConditionFormula>
    <errorMessage>Invoice Line&apos;s Subsidiary should match the Credit Note record&apos;s Subsidiary</errorMessage>
</ValidationRule>